# gbuild

./: Cargo.toml  LICENSE  README.md
gbuild/: Cargo.toml  README.md
gbuild-test/: Cargo.toml  build.rs
gbuild-test/src/: gbuild-test.gresource.xml  main.rs
gbuild-test/src/resources/: test.txt
gbuild/src/: lib.rs
